# tjsmigration

./: .envrc  .gitignore  .gitmodules  package.json  pnpm-lock.yaml  pyproject.toml
src/tjsmigration/: __init__.py  __main__.py  model_migration.py  readme_migration.py  readme_validation.py  task_type.py  tempdir.py
