[project]
name = "tjsmigration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yuichiro Tachibana (Tsuchiya)", email = "t.yic.yt@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "huggingface-hub>=0.33.0",
    "onnx>=1.18.0",
]

[project.scripts]
tjsmigration = "tjsmigration:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
